# swagger_output.json
@@ -9,7 +9,8 @@
   "basePath": "/",
   "tags": [],
   "schemes": [
-    "http"
+    "http",
+    "https"
   ],
   "consumes": [],
   "produces": [],
@@ -105,7 +106,12 @@
         "summary": "获取企业信息",
         "description": "返回",
         "parameters": [],
-        "responses": {}
+        "responses": {},
+        "security": [
+          {
+            "JiangduJWT": []
+          }
+        ]
       }
     },
     "/api/users/getCompanyInfobyCondition": {
@@ -114,9 +120,14 @@
           "Users"
         ],
         "summary": "获取企业信息根据选择条件",
-        "description": "返回* \n \n \n#swagger.requestBody = {  required: true,  content: {  __¬¬¬__application/json__¬¬¬__: {  schema: {  $ref: ",
+        "description": "",
         "parameters": [],
         "responses": {},
+        "security": [
+          {
+            "JiangduJWT": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -2910,6 +2921,16 @@
             }
           }
         }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "JiangduJWT": {
+        "type": "http",
+        "scheme": "bearer",
+        "in": "header",
+        "bearerFormat": "JWT"
       }
     }
   }
